--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.4
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -73,16 +74,20 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-     - family: Schyler
+     - family: Montserrat
        fonts:
-         - asset: fonts/Schyler-Regular.ttf
-         - asset: fonts/Schyler-Italic.ttf
-           style: italic
-     - family: Trajan Pro
-       fonts:
-         - asset: fonts/TrajanPro.ttf
-         - asset: fonts/TrajanPro_Bold.ttf
+         - asset: assets/fonts/Montserrat-Bold.ttf
            weight: 700
+         - asset: assets/fonts/Montserrat-SemiBold.ttf
+           weight: 600
+         - asset: assets/fonts/Montserrat-Medium.ttf
+           weight: 500
+         - asset: assets/fonts/Montserrat-Regular.ttf
+           weight: 400 
+         - asset: assets/fonts/Montserrat-Light.ttf
+           weight: 300  
+
+         
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
